; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/omap/extr_lcdc.c_enable_controller.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/omap/extr_lcdc.c_enable_controller.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@OMAP_LCDC_CONTROL = common dso_local global i32 0, align 4
@OMAP_LCDC_CTRL_LCD_EN = common dso_local global i32 0, align 4
@OMAP_LCDC_IRQ_MASK = common dso_local global i32 0, align 4
@lcdc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@OMAP_LCDC_IRQ_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @enable_controller to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_controller() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @OMAP_LCDC_CONTROL, align 4
  %3 = call i32 @omap_readl(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @OMAP_LCDC_CTRL_LCD_EN, align 4
  %5 = load i32, i32* %1, align 4
  %6 = or i32 %5, %4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* @OMAP_LCDC_IRQ_MASK, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %1, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @lcdc, i32 0, i32 0), align 4
  %12 = load i32, i32* @OMAP_LCDC_IRQ_DONE, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* %1, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %1, align 4
  %16 = load i32, i32* %1, align 4
  %17 = load i32, i32* @OMAP_LCDC_CONTROL, align 4
  %18 = call i32 @omap_writel(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @omap_readl(i32) #1

declare dso_local i32 @omap_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
